--- a/ide/ui/ide-console/src/main/resources/META-INF/dirigible/ide-console/console.html
+++ b/ide/ui/ide-console/src/main/resources/META-INF/dirigible/ide-console/console.html
@@ -9,76 +9,80 @@
   ~ SAP - initial API and implementation
   -->
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
-<head>
-    <meta charset="utf-8" />
-    <title>Eclipse Dirigible Log Console</title>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="/services/v4/js/theme/resources.js/bootstrap.min.css">
-    <link rel="stylesheet" href="/services/v4/js/theme/resources.js/ide.css">
-    <link href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
+        <link rel="icon" sizes="any" href="data:;base64,iVBORw0KGgo=">
 
-    <script src="/webjars/jquery/3.4.1/jquery.min.js"></script>
-    <script src="/services/v4/web/ide-core/ui/message-hub.js"></script>
+        <title>Eclipse Dirigible Log Console</title>
 
-    <!-- AngularJS -->
-    <script src="/webjars/angularjs/1.8.2/angular.min.js"></script>
-    <script src="/webjars/angularjs/1.8.2/angular-resource.min.js"></script>
+        <link rel="stylesheet" href="/services/v4/js/theme/resources.js/bootstrap.min.css">
+        <link rel="stylesheet" href="/services/v4/js/theme/resources.js/ide.css">
+        <link href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
 
-</head>
+        <script type="text/javascript" src="/webjars/jquery/3.4.1/jquery.min.js"></script>
+        <script type="text/javascript" src="/services/v4/web/ide-core/ui/message-hub.js"></script>
 
-<body ng-app="console" ng-controller="ConsoleController" style="font-family: monospace; font-size: x-small;">
-    <div class="row bg-default navbar navbar-fixed-top">
-        <div class="col-md-3">
-            <span class="bg-default view-toolbar console-row-info">
-                <input id="logLevelInfo" type="checkbox" value="INFO" ng-model="logLevelInfoEnabled"
-                    ng-click="selectLogLevel()" checked>
-                <label for="logLevelInfo">INFO</label>
-            </span>
-            <span class="bg-default view-toolbar console-row-warn">
-                <input id="logLevelWarning" type="checkbox" value="WARN" ng-model="logLevelWarnEnabled"
-                    ng-click="selectLogLevel()" checked>
-                <label for="logLevelWarning">WARN</label>
-            </span>
-            <span class="bg-default view-toolbar console-row-error">
-                <input id="logLevelError" type="checkbox" value="ERROR" ng-model="logLevelErrorEnabled"
-                    ng-click="selectLogLevel()" checked>
-                <label for="logLevelError">ERROR</label>
-            </span>
-            <span class="bg-default view-toolbar console-row-debug">
-                <input id="logLevelDebug" type="checkbox" value="DEBUG" ng-model="logLevelDebugEnabled"
-                    ng-click="selectLogLevel()" checked>
-                <label for="logLevelDebug">DEBUG</label>
-            </span>
-            <span class="bg-default view-toolbar console-row-trace">
-                <input id="logLevelTrace" type="checkbox" value="TRACE" ng-model="logLevelTraceEnabled"
-                    ng-click="selectLogLevel()" checked>
-                <label for="logLevelTrace">TRACE</label>
-            </span>
-        </div>
-        <div class="col-md-8">
-            <input type="text" name="search" class="form-control" ng-model="searchText" ng-change="search()"
-                ng-keyup="cancel($event)" placeholder="Search ...">
-        </div>
-        <div class="col-md-1">
-            <button class="btn btn-default preview-button" type="button" ng-click="clearLog()"><i
-                    class="fa fa-ban"></i></button>
-        </div>
-    </div>
+        <!-- AngularJS -->
+        <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular.min.js"></script>
+        <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular-resource.min.js"></script>
 
-    <div id="row" style="padding-top: 30px; padding-bottom: 20px">
-        <div class="console-row console-row-log">Beginning of console log...</div>
-        <div id="logContent">
-            <div ng-repeat="next in logs" class="console-row console-row-{{next.level.toLowerCase()}}">
-                <span ng-show="{{showDate}}">[{{next.date}}]</span>
-                <span>[{{next.level}}]</span>
-                <span style="white-space: break-spaces;">{{next.message}}</span>
+    </head>
+
+    <body ng-app="console" ng-controller="ConsoleController" style="font-family: monospace; font-size: x-small;">
+        <div class="row bg-default navbar navbar-fixed-top">
+            <div class="col-md-3">
+                <span class="bg-default view-toolbar console-row-info">
+                    <input id="logLevelInfo" type="checkbox" value="INFO" ng-model="logLevelInfoEnabled"
+                        ng-click="selectLogLevel()" checked>
+                    <label for="logLevelInfo">INFO</label>
+                </span>
+                <span class="bg-default view-toolbar console-row-warn">
+                    <input id="logLevelWarning" type="checkbox" value="WARN" ng-model="logLevelWarnEnabled"
+                        ng-click="selectLogLevel()" checked>
+                    <label for="logLevelWarning">WARN</label>
+                </span>
+                <span class="bg-default view-toolbar console-row-error">
+                    <input id="logLevelError" type="checkbox" value="ERROR" ng-model="logLevelErrorEnabled"
+                        ng-click="selectLogLevel()" checked>
+                    <label for="logLevelError">ERROR</label>
+                </span>
+                <span class="bg-default view-toolbar console-row-debug">
+                    <input id="logLevelDebug" type="checkbox" value="DEBUG" ng-model="logLevelDebugEnabled"
+                        ng-click="selectLogLevel()" checked>
+                    <label for="logLevelDebug">DEBUG</label>
+                </span>
+                <span class="bg-default view-toolbar console-row-trace">
+                    <input id="logLevelTrace" type="checkbox" value="TRACE" ng-model="logLevelTraceEnabled"
+                        ng-click="selectLogLevel()" checked>
+                    <label for="logLevelTrace">TRACE</label>
+                </span>
+            </div>
+            <div class="col-md-8">
+                <input type="text" name="search" class="form-control" ng-model="searchText" ng-change="search()"
+                    ng-keyup="cancel($event)" placeholder="Search ...">
+            </div>
+            <div class="col-md-1">
+                <button class="btn btn-default preview-button" type="button" ng-click="clearLog()"><i
+                        class="fa fa-ban"></i></button>
             </div>
         </div>
-    </div>
 
-    <script src="console-controller.js"></script>
-</body>
+        <div id="row" style="padding-top: 30px; padding-bottom: 20px">
+            <div class="console-row console-row-log">Beginning of console log...</div>
+            <div id="logContent">
+                <div ng-repeat="next in logs" class="console-row console-row-{{next.level.toLowerCase()}}">
+                    <span ng-show="{{showDate}}">[{{next.date}}]</span>
+                    <span>[{{next.level}}]</span>
+                    <span style="white-space: break-spaces;">{{next.message}}</span>
+                </div>
+            </div>
+        </div>
+
+        <script src="console-controller.js"></script>
+    </body>
 
 </html>
