--- a/ide/ui/ide-core/src/main/resources/META-INF/dirigible/ide-core/ui/tmpl/brandIcon.html
+++ b/ide/ui/ide-core/src/main/resources/META-INF/dirigible/ide-core/ui/tmpl/brandIcon.html
@@ -1,1 +1,1 @@
-<link rel="shortcut icon" type="image/png" href="{{branding.icon}}" />
+<link rel="icon" type="image/png" sizes="16x16" ng-href="{{branding.icon}}" />
