--- a/ide/ui/ide-database/src/main/resources/META-INF/dirigible/ide-database/explorer/explorer.html
+++ b/ide/ui/ide-database/src/main/resources/META-INF/dirigible/ide-database/explorer/explorer.html
@@ -9,60 +9,64 @@
   ~ SAP - initial API and implementation
   -->
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
-<head>
-	<meta charset="utf-8" />
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Eclipse Dirigible - Database</title>
+		<link rel="icon" sizes="any" href="data:;base64,iVBORw0KGgo=">
 
-	<script src="/services/v4/web/ide-core/ui/message-hub.js"></script>
+		<title>Eclipse Dirigible - Database</title>
 
-	<link href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+		<script type="text/javascript" src="/services/v4/web/ide-core/ui/message-hub.js"></script>
 
-	<!-- jQuery -->
-	<script src="/webjars/jquery/3.4.1/jquery.min.js"></script>
+		<link href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-	<!-- Twitter Bootstrap with Theme Support -->
-	<link rel="stylesheet" href="/services/v4/js/theme/resources.js/bootstrap.min.css">
-	<script src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<!-- jQuery -->
+		<script type="text/javascript" src="/webjars/jquery/3.4.1/jquery.min.js"></script>
 
-	<!-- AngularJS -->
-	<script src="/webjars/angularjs/1.8.2/angular.min.js"></script>
-	<script src="/webjars/angularjs/1.8.2/angular-resource.min.js"></script>
+		<!-- Twitter Bootstrap with Theme Support -->
+		<link rel="stylesheet" href="/services/v4/js/theme/resources.js/bootstrap.min.css">
+		<script type="text/javascript" src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-	<link href="/services/v4/js/theme/resources.js/jstree.css" rel="stylesheet">
-	<script src="/webjars/jstree/3.3.5/jstree.min.js"></script>
+		<!-- AngularJS -->
+		<script type="text/javascript" src="/webjars/angularjs/1.8.2/angular.min.js"></script>
+		<script type="text/javascript" src="/webjars/angularjs/1.8.2/angular-resource.min.js"></script>
 
-	<!-- Custom IDE Styles -->
-	<link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/ide.css" />
+		<link href="/services/v4/js/theme/resources.js/jstree.css" rel="stylesheet">
+		<script type="text/javascript" src="/webjars/jstree/3.3.5/jstree.min.js"></script>
 
-	<script src="explorer.js"></script>
+		<!-- Custom IDE Styles -->
+		<link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/ide.css" />
 
-</head>
+		<script type="text/javascript" src="explorer.js"></script>
 
-<body ng-app="database" ng-controller="DatabaseController">
+	</head>
 
-	<div class="view-fixed-top">
-		<div class="btn-toolbar-top">
-			<div class="btn-group pull-right" role="group" aria-label="toolbar">
-				<button type="button" class="btn btn-default btn-top" title="Run" ng-click="runSQL()"><i
-                        class="fa fa-play"></i></button>
-				<button type="button" class="btn btn-default btn-top" title="Refresh" ng-click="refreshDatabase()"><i
-                        class="fa fa-refresh"></i></button>
+	<body ng-app="database" ng-controller="DatabaseController">
 
-				<select ng-model="selectedDatabase" ng-options="o as o for o in databases" ng-change="databaseChanged()"
-                    class="dropdown btn btn-default dropdown-toggle dropdown-top" title="Databases"></select>
-				<select ng-model="selectedDatasource" ng-options="o as o for o in datasources"
-                    ng-change="datasourceChanged()" class="dropdown btn btn-default dropdown-toggle dropdown-top"
-                    title="Datasources"></select>
+		<div class="view-fixed-top">
+			<div class="btn-toolbar-top">
+				<div class="btn-group pull-right" role="group" aria-label="toolbar">
+					<button type="button" class="btn btn-default btn-top" title="Run" ng-click="runSQL()"><i
+							class="fa fa-play"></i></button>
+					<button type="button" class="btn btn-default btn-top" title="Refresh"
+						ng-click="refreshDatabase()"><i class="fa fa-refresh"></i></button>
+
+					<select ng-model="selectedDatabase" ng-options="o as o for o in databases"
+						ng-change="databaseChanged()" class="dropdown btn btn-default dropdown-toggle dropdown-top"
+						title="Databases"></select>
+					<select ng-model="selectedDatasource" ng-options="o as o for o in datasources"
+						ng-change="datasourceChanged()" class="dropdown btn btn-default dropdown-toggle dropdown-top"
+						title="Datasources"></select>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div>
-		<div class="database"></div>
-	</div>
+		<div>
+			<div class="database"></div>
+		</div>
 
-</body>
+	</body>
 
 </html>
