--- a/ide/ui/ide-database/src/main/resources/META-INF/dirigible/ide-database/sql/result.html
+++ b/ide/ui/ide-database/src/main/resources/META-INF/dirigible/ide-database/sql/result.html
@@ -11,88 +11,88 @@
 
 <html lang="en">
 
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Eclipse Dirigible &trade; | Database </title>
+        <link rel="icon" sizes="any" href="data:;base64,iVBORw0KGgo=">
 
-	<link rel="shortcut icon" type="image/png" href="/services/v4/web/resources/images/favicon.png" />
+        <title>Eclipse Dirigible &trade; | Database </title>
 
-	<link href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-	<!-- jQuery -->
-	<script type="text/javascript" src="/webjars/jquery/3.4.1/jquery.min.js"></script>
+        <!-- jQuery -->
+        <script type="text/javascript" src="/webjars/jquery/3.4.1/jquery.min.js"></script>
 
-	<!-- AngularJS -->
-	<script type="text/javascript" src="/webjars/angularjs/1.8.2/angular.min.js"></script>
-	<script type="text/javascript" src="/webjars/angularjs/1.8.2/angular-resource.min.js"></script>
+        <!-- AngularJS -->
+        <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular.min.js"></script>
+        <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular-resource.min.js"></script>
 
-	<!-- Twitter Bootstrap with Theme Support -->
-	<link rel="stylesheet" href="/services/v4/js/theme/resources.js/bootstrap.min.css">
-	<script type="text/javascript" src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <!-- Twitter Bootstrap with Theme Support -->
+        <link rel="stylesheet" href="/services/v4/js/theme/resources.js/bootstrap.min.css">
+        <script type="text/javascript" src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-	<!-- Custom IDE Styles -->
-	<link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/ide.css" />
+        <!-- Custom IDE Styles -->
+        <link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/ide.css" />
 
-	<script type="text/javascript" src="/services/v4/web/ide-core/ui/message-hub.js"></script>
+        <script type="text/javascript" src="/services/v4/web/ide-core/ui/message-hub.js"></script>
 
-</head>
+    </head>
 
-<body ng-app="database-table" ng-controller="DatabaseTableController">
-	<h4 ng-hide="hasMultipleProcedureResults" ng-show="result">{{result}}</h4>
-	<div class="tableFixHead">
-		<table class="table table-striped" ng-hide="hasMultipleProcedureResults" ng-show="columns">
-			<thead>
-				<tr>
-					<th ng-repeat="column in columns">{{column}}</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr ng-repeat="row in rows">
-					<td ng-repeat="cell in row">
-						<div class="tdSingleLine">
-							{{cell}}
-						</div>
-					</td>
-				</tr>
-			</tbody>
-		</table>
+    <body ng-app="database-table" ng-controller="DatabaseTableController">
+        <h4 ng-hide="hasMultipleProcedureResults" ng-show="result">{{result}}</h4>
+        <div class="tableFixHead">
+            <table class="table table-striped" ng-hide="hasMultipleProcedureResults" ng-show="columns">
+                <thead>
+                    <tr>
+                        <th ng-repeat="column in columns">{{column}}</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="row in rows">
+                        <td ng-repeat="cell in row">
+                            <div class="tdSingleLine">
+                                {{cell}}
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
 
-		<div ng-show="hasMultipleProcedureResults">
-			<ul class="nav nav-tabs">
-				<li ng-class="{active: $index === 0}" ng-repeat="next in procedureResults"><a data-toggle="pill"
-						href="#{{$index + 1}}">Result {{$index + 1}}</a></li>
-			</ul>
+            <div ng-show="hasMultipleProcedureResults">
+                <ul class="nav nav-tabs">
+                    <li ng-class="{active: $index === 0}" ng-repeat="next in procedureResults"><a data-toggle="pill"
+                            href="#{{$index + 1}}">Result {{$index + 1}}</a></li>
+                </ul>
 
-			<div class="tab-content">
-				<div ng-repeat="next in procedureResults" id="{{$index + 1}}" class="tab-pane fade in"
-					ng-class="{active: $index === 0}">
-					<table class="table table-striped"">
+                <div class="tab-content">
+                    <div ng-repeat="next in procedureResults" id="{{$index + 1}}" class="tab-pane fade in"
+                        ng-class="{active: $index === 0}">
+                        <table class="table table-striped"">
 						<thead>
 							<tr>
 								<th ng-repeat=" column in procedureResults[$index].columns">{{column}}</th>
-						</tr>
-						</thead>
-						<tbody>
-							<tr ng-repeat="row in procedureResults[$index].rows">
-								<td ng-repeat="cell in row">
-									<div class="tdSingleLine">
-										{{cell}}
-									</div>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-			</div>
-		</div>
+                            </tr>
+                            </thead>
+                            <tbody>
+                                <tr ng-repeat="row in procedureResults[$index].rows">
+                                    <td ng-repeat="cell in row">
+                                        <div class="tdSingleLine">
+                                            {{cell}}
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
 
-	</div>
+        </div>
 
-	<script>
-		angular.module('database-table', [])
+        <script>
+            angular.module('database-table', [])
             .controller('DatabaseTableController', function ($scope, $http) {
 
                 let messageHub = new FramesMessageHub();
@@ -221,5 +221,5 @@
                     $scope.procedureResults = null;
                 }
             });
-	</script>
-</body>
+        </script>
+    </body>
