--- a/ide/ui/ide-extensions/src/main/resources/META-INF/dirigible/ide-extensions/editors/extensionpoint/editor.html
+++ b/ide/ui/ide-extensions/src/main/resources/META-INF/dirigible/ide-extensions/editors/extensionpoint/editor.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="page">
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" sizes="any" href="data:;base64,iVBORw0KGgo=">
+        <meta name="description" content="">
+        <meta name="author" content="">
 
-    <link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/bootstrap.min.css">
-    <link type="text/css" rel="stylesheet" href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css">
-    <link type="image/png" rel="shortcut icon" href="/services/v4/web/resources/images/favicon.png" />
+        <link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/bootstrap.min.css">
+        <link type="text/css" rel="stylesheet" href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css">
 
-    <script type="text/javascript" src="/webjars/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js" async></script>
-    <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular.min.js"></script>
-    <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular-resource.min.js"></script>
-    <script type="text/javascript" src="/services/v4/web/ide-core/ui/message-hub.js"></script>
+        <script type="text/javascript" src="/webjars/jquery/3.4.1/jquery.min.js"></script>
+        <script type="text/javascript" src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js" async></script>
+        <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular.min.js"></script>
+        <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular-resource.min.js"></script>
+        <script type="text/javascript" src="/services/v4/web/ide-core/ui/message-hub.js"></script>
 
-    <!-- Custom IDE Styles -->
-    <link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/ide.css" />
-</head>
+        <!-- Custom IDE Styles -->
+        <link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/ide.css" />
+    </head>
 
-<body ng-controller="PageController">
-    <div class="container">
-        <div class="page-header">
-            <h1>Extension Point Description: {{file}}</h1>
+    <body ng-controller="PageController">
+        <div class="container">
+            <div class="page-header">
+                <h1>Extension Point Description: {{file}}</h1>
+            </div>
+            <form>
+                <div class="form-group">
+                    <label>Name</label>
+                    <input type="text" class="form-control" placeholder="Name of the Queue or the Topic"
+                        ng-model="extensionpoint.name">
+                </div>
+                <div class="form-group">
+                    <label>Description</label>
+                    <textarea class="form-control" placeholder="Enter description" ng-model="extensionpoint.description"
+                        cols=20 rows=5></textarea>
+                </div>
+                <button type="button" class="btn btn-primary" ng-click="save()">Save</button>
+            </form>
         </div>
-        <form>
-            <div class="form-group">
-                <label>Name</label>
-                <input type="text" class="form-control" placeholder="Name of the Queue or the Topic"
-                    ng-model="extensionpoint.name">
-            </div>
-            <div class="form-group">
-                <label>Description</label>
-                <textarea class="form-control" placeholder="Enter description" ng-model="extensionpoint.description"
-                    cols=20 rows=5></textarea>
-            </div>
-            <button type="button" class="btn btn-primary" ng-click="save()">Save</button>
-        </form>
-    </div>
 
-    <script type="text/javascript" src="editor.js"></script>
+        <script type="text/javascript" src="editor.js"></script>
 
-</body>
+    </body>
 
 </html>
