--- a/ide/ui/ide-repository/src/main/resources/META-INF/dirigible/ide-repository/repository.html
+++ b/ide/ui/ide-repository/src/main/resources/META-INF/dirigible/ide-repository/repository.html
@@ -9,56 +9,57 @@
   ~ SAP - initial API and implementation
   -->
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
-<head>
-    <meta charset="utf-8" />
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" sizes="any" href="data:;base64,iVBORw0KGgo=">
+        <title>Eclipse Dirigible - Repository</title>
 
-    <title>Eclipse Dirigible - Repository</title>
+        <script type="text/javascript" src="/services/v4/web/ide-core/ui/message-hub.js"></script>
 
-    <script type="text/javascript" src="/services/v4/web/ide-core/ui/message-hub.js"></script>
+        <link href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <!-- jQuery -->
+        <script type="text/javascript" src="/webjars/jquery/3.4.1/jquery.min.js"></script>
 
-    <!-- jQuery -->
-    <script type="text/javascript" src="/webjars/jquery/3.4.1/jquery.min.js"></script>
+        <!-- AngularJS -->
+        <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular.min.js"></script>
+        <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular-resource.min.js"></script>
 
-    <!-- AngularJS -->
-    <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular.min.js"></script>
-    <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular-resource.min.js"></script>
+        <!-- jsTree -->
+        <link href="/services/v4/js/theme/resources.js/jstree.css" rel="stylesheet">
+        <script type="text/javascript" src="/webjars/jstree/3.3.5/jstree.min.js"></script>
 
-    <!-- jsTree -->
-    <link href="/services/v4/js/theme/resources.js/jstree.css" rel="stylesheet">
-    <script type="text/javascript" src="/webjars/jstree/3.3.5/jstree.min.js"></script>
+        <!-- Twitter Bootstrap with Theme Support -->
+        <link rel="stylesheet" href="/services/v4/js/theme/resources.js/bootstrap.min.css">
+        <script type="text/javascript" src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <!-- Twitter Bootstrap with Theme Support -->
-    <link rel="stylesheet" href="/services/v4/js/theme/resources.js/bootstrap.min.css">
-    <script type="text/javascript" src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <!-- Custom IDE Styles -->
+        <link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/ide.css" />
 
-    <!-- Custom IDE Styles -->
-    <link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/ide.css" />
+        <script type="text/javascript" src="repository.js"></script>
 
-    <script type="text/javascript" src="repository.js"></script>
+    </head>
 
-</head>
+    <body ng-app="repository" ng-controller="RepositoryController as repository">
 
-<body ng-app="repository" ng-controller="RepositoryController as repository">
-
-    <div class="view-fixed-top">
-        <div class="btn-toolbar-top">
-            <div class="btn-group pull-right" role="group" aria-label="toolbar">
-                <button type="button" class="btn btn-default btn-top" title="Export"
-                    ng-click="repository.exportRepository()"><i class="fa fa-file-archive-o"></i></button>
-                <button type="button" class="btn btn-default btn-top" title="Refresh" ng-click="repository.refresh()"><i
-                        class="fa fa-refresh"></i></button>
+        <div class="view-fixed-top">
+            <div class="btn-toolbar-top">
+                <div class="btn-group pull-right" role="group" aria-label="toolbar">
+                    <button type="button" class="btn btn-default btn-top" title="Export"
+                        ng-click="repository.exportRepository()"><i class="fa fa-file-archive-o"></i></button>
+                    <button type="button" class="btn btn-default btn-top" title="Refresh"
+                        ng-click="repository.refresh()"><i class="fa fa-refresh"></i></button>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div>
-        <div class="repository"></div>
-    </div>
+        <div>
+            <div class="repository"></div>
+        </div>
 
-</body>
+    </body>
 
 </html>
