Fixes for #1344 and #1346
Signed-off-by: StanZGenchev <stanislav.genchev@sap.com>

--- a/ide/ui/ide-workbench/src/main/resources/META-INF/dirigible/ide/welcome.html
+++ b/ide/ui/ide-workbench/src/main/resources/META-INF/dirigible/ide/welcome.html
@@ -146,7 +146,7 @@
 
         <iframe src="https://www.youtube.com/embed/uh-vRTCqD1A"
             style="width: 560px !important; height: 315px !important; border: none" gesture="media"
-            allow="encrypted-media" allowfullscreen></iframe>
+            allowfullscreen></iframe>
 
         <button type="button" id="generateFromTemplate" ng-show=false data-toggle="modal"
             data-target="#dialogGenerateFromTemplate"></button>
