--- a/ide/ui/ide-core/src/main/resources/META-INF/dirigible/ide-core/ui/tmpl/menu.html
+++ b/ide/ui/ide-core/src/main/resources/META-INF/dirigible/ide-core/ui/tmpl/menu.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-flex">
         <div class="navbar-header">
-            <a class="navbar-brand" href="{{branding.brandUrl}}" target="_blank">
+            <a class="navbar-brand" href="{{branding.brandUrl}}" target="_blank" rel="noopener noreferrer">
                 &nbsp;<i class="fa fa-cloud"></i>&nbsp;&nbsp;&nbsp;&nbsp;{{branding.brand}}
             </a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
