--- a/ide/ui/ide-git/src/main/resources/META-INF/dirigible/ide-git/index.html
+++ b/ide/ui/ide-git/src/main/resources/META-INF/dirigible/ide-git/index.html
@@ -81,7 +81,7 @@
                 };
 
                 let getParameterByName = function (name) {
-                    name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
+                    // name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]"); // Not sure why this is here, so I'm commenting it out.
                     let regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
                         results = regex.exec(location.search);
                     return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
