--- a/ide/ui/ide-workbench/src/main/resources/META-INF/dirigible/ide/about/about.html
+++ b/ide/ui/ide-workbench/src/main/resources/META-INF/dirigible/ide/about/about.html
@@ -52,8 +52,8 @@
                 </div>
                 <div class="form-group">
                     <label>Commit Id:</label> <strong class="badge"><a style="color:inherit"
-                            href="{{version.productRepository}}/commit/{{version.productCommitId}}"
-                            target="_blank">{{version.productCommitId}}</a></strong>
+                            href="{{version.productRepository}}/commit/{{version.productCommitId}}" target="_blank"
+                            rel="noopener noreferrer">{{version.productCommitId}}</a></strong>
                 </div>
                 <div class="form-group">
                     <label>Type:</label> <strong class="badge">{{version.productType}}</strong>
